<resources>
    <string name="app_name">College Connect</string>
    <string name="onboarding_log_in">Log In</string>
    <string name="onboarding_connect">Connect</string>
    <string name="onboarding_get_started">Get Started</string>
    <string name="onboarding_teacher_log_in">Log in as Teacher</string>
    <string name="onboarding_student_log_in">Log in as Student</string>
    <string name="onboarding_connect_description">Connect to other Students, Peers and Teachers.</string>
    <string name="onboarding_get_started_description">It\'s time to start the journey.</string>
    <string name="register_as_student">Student</string>
    <string name="register_as_teacher">Teacher</string>
    <string name="teacher_sign_in">Sign in as Teacher</string>
    <string name="student_sign_in">Sign in as Student</string>
    <string name="default_toolbar_title">Sign In</string>
    <string name="no_network">Network not available!</string>
    <string name="register_as_activity_title">Select Avatar</string>
    <string name="register_as_teacher_content_desc">Register as teacher</string>
    <string name="register_as_student_content_desc">Register as student</string>
    <string name="welcome_toast">"Welcome "</string>
    <string name="sign_out">Sign Out</string>
    <string name="main_activity_error_msg">If you are seeing this screen then something has gone wrong. Please reinstall the app to fix it.</string>
    <string name="select_college_activity_title">Select your college</string>
    <string name="exit_dialog_title">Exiting…</string>
    <string name="exit_dialog_msg">Are you sure you want to quit registration?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="feature_under_construction">Feature under construction…</string>
    <string name="loading_colleges">Loading colleges…</string>
    <string name="no_clg_matching_query">No colleges to match your query!</string>
    <string name="dialog_please_wait_title">Please wait!</string>
    <string name="dialog_loading_your_profile_msg">Loading your profile…</string>
    <string name="dialog_positive_button_text">Let\'s Start</string>
    <string name="dialog_positive_button_select_college_text">Select College</string>
    <string name="dialog_positive_button_wrong_user_text">Continue as %1$s</string>
    <string name="dialog_great_title">Great!</string>
    <string name="dialog_wrong_user_title">Oops!</string>
    <string name="dialog_wrong_user_msg">Hey %1$s \nLooks like you are already a %2$s.
        \nDo you want to continue?</string>
    <string name="dialog_already_msg">You already have a college:\n</string>
    <string name="dialog_no_college_msg">Looks like you don\'t have a college\nGo ahead and select one.</string>
    <string name="accessibility_logo">Avatar Picture</string>
    <string name="no_classes_yet">No classes yet</string>
    <string name="add_class">Add Class</string>
    <string name="enter_class_name">Enter Class Name</string>
    <string name="select_color_code">Select Color Code</string>
    <string name="selected_color">Selected Color</string>
    <string name="add">Add</string>
    <string name="class_image">Class image</string>
    <string name="student_s">Student(s)</string>
    <string name="no_students_yet">No students yet</string>
    <string name="add_student">Add Student</string>
    <string name="student_email_id">Student Email Id</string>
    <string name="or">Or</string>
    <string name="select_from_list">Select from list</string>
    <string name="no_students_nfrom_your_college">No students from your college</string>
    <string name="send">Send</string>
    <string name="no_reminders_yet">No reminders yet</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
</resources>
