<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.jainsaab.collegeconnect.signingin.RegisterAsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/teacher_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/register_as_teacher_card_margin_btm"
        android:layout_weight="1"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorRegisterAsTeacher"
        app:cardCornerRadius="@dimen/default_card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/register_as_card_padding_top">

            <ImageView
                android:id="@+id/teacher_avatar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:contentDescription="@string/register_as_teacher_content_desc"
                android:src="@drawable/register_teacher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_as_teacher"
                android:textColor="@android:color/white"
                android:textSize="@dimen/register_as_text_size" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/student_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorRegisterAsStudent"
        app:cardCornerRadius="@dimen/default_card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/register_as_card_padding_top">

            <ImageView
                android:id="@+id/student_avatar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:contentDescription="@string/register_as_student_content_desc"
                android:src="@drawable/register_student" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_as_student"
                android:textColor="@android:color/white"
                android:textSize="@dimen/register_as_text_size" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
