<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jainsaab.collegeconnect.teacher.AddStudentActivity">

    <FrameLayout
        android:id="@+id/activity_student_class"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/students_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

        <LinearLayout
            android:id="@+id/empty_view_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:contentDescription="@string/no_students_yet"
                android:scaleType="fitXY"
                android:src="@drawable/empty_state" />

            <TextView
                android:id="@+id/empty_recycler_view_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_students_yet"
                android:textSize="25sp"
                android:textStyle="italic" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_person_add_white_24dp" />

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/reveal_layout_student"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="64dp"
        android:visibility="invisible"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/sample_text_student"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/add_student"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_student_email_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:hint="@string/student_email_id"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/add_student"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/add_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add"
                    tools:textColor="@color/colorRegisterAsTeacher" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/select_from_list"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/button_round_shape">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/select_from_Students"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/college_Students_empty_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_students_nfrom_your_college"
                    android:textColor="@color/colorRegisterAsTeacher"
                    android:textSize="15sp" />

            </FrameLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
